more coins added

--- a/index.html
+++ b/index.html
@@ -77,10 +77,15 @@
                                     <option value="ethereum">Ethereum</option>
                                     <option value="polkadot">Polkadot</option>
                                     <option value="tether">Tether</option>
+                                    <option value="ripple">Ripple</option>
+                                    <option value="binance-coin">Binance-coin</option>
+                                    <option value="cardano">Cardano</option>
+                                    <option value="litecoin">Litecoin</option>
+                                    
                                 </select>
                             </div>
                         </div>
-                            <button type="submit" class="col-12 btn btn-primary ">Get Price</button>
+                            <button type="submit" class="col-12 btn btn-primary ">Get Information</button>
                     </form>
                 </div>
             </div>
