--- a/index.html
+++ b/index.html
@@ -316,7 +316,33 @@
 
 </a>
 
-<div class="foot"> Made With <i class="fa fa-heart" aria-hidden="true"> </i>  <br> <i class="fa fa-copyright" aria-hidden="true"></i> Amit Deo </div>
+<div class="foot"> Made With <i class="fa fa-heart" aria-hidden="true"> </i>  <br> <i class="fa fa-copyright" aria-hidden="true"></i> Amit Deo 
+
+
+
+
+
+<div class="social-container">
+  <ul class="social-icons">
+      <li><a href="https://www.instagram.com/re_captcha_/"><i class="fa fa-instagram"></i></a></li>
+      <li><a href="https://www.facebook.com/people/Amit/100003122620500/"><i class="fa fa-facebook"></i></a></li>
+      <li><a href="https://www.linkedin.com/in/amit-deo-1398b2193/"><i class="fa fa-linkedin"></i></a></li>
+      <li><a href="https://github.com/amitdeo5"><i class="fa fa-github"></i></a></li>
+  </ul>
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
