--- a/index.html
+++ b/index.html
@@ -363,6 +363,20 @@
           }
         }
         </script>
+
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-34R2L5T8XP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-34R2L5T8XP');
+</script>
+
+
+
     
 </body>
 </html>
