--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="container">
         <div class="row justify-content-center">
           <center class="col-7 text-center mt-2"> <img src = img/logo.png   class="responsive" width="400" height="200"  >  </center><br>
-            <h1 class="col-7 text-center mt-2">  CRYPTO MATE <br> <h3>One Point Solution for crypto investers <br><br></h3><br><br>
+            <h1 class="col-7 text-center mt-2">  CRYPTO MATE <br> <h3>One Point Solution for crypto investors <br><br></h3><br><br>
             <h6 class="col-7 text-center mt-2"> Get Real Time Information of Crypto Currencies
               <br>  </h6>
 
