form linked with firebase

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       
                   
                     <p style="color: #ffb338">If you holds a good experence in investing and have a good knowledge in cryptocurrencies and related topics, then you too can become our mentor. </p>
-                    <a href="page/mentorform.html">  
+                    <a href="mentor_form/form.html">  
                        <div class="button relative">
                           <div class="element">
                              <h3 style="color: #ffffff;">Click Here to Become Mentor</h3>
