for multitech repo

--- a/mentor_form/form.html
+++ b/mentor_form/form.html
@@ -70,19 +70,24 @@
             </div>
 
             <div class="inputBox">
-                <h3> Year of experience :</h3>  
-                <input type="number" id="year" placeholder="" required/>
+                <h3> Brand Name :</h3>  
+                <input type="text" id="year" placeholder=" ABC solutions" required/>
             </div>
 
             <div class="inputBox">
-                <h3> Your expertise :</h3>  
+                <h3> Service you want :</h3>  
+                <input type="text" id="brand" placeholder="eg. : web development" required/>
+            </div>
+
+            <div class="inputBox">
+                <h3> Briefly explain your requirment :</h3>  
                 <textarea id="msgContent" cols="30" rows="10" placeholder="briefly mention your area of expertise in bullet points" required></textarea>
             </div>
 
-            <div class="inputBox">
+           <!-- <div class="inputBox">
                 <h3> Your recent photo :</h3>  
                 <input type="file" id="photo" name="filename" required>
-            </div>
+            </div> -->
 
             <div class="inputBox">
                 <button type="submit">Submit</button>
